# tgs-mapper-agent

./: .env.example  .gitignore  CLAUDE.md  DEPENDENCIES.md  PROJECT_BRIEF.md  README.md  compose.yml  justfile
crew/: Dockerfile  crew_setup.py  main.py  pyproject.toml  requirements.txt
crew/agents/: __init__.py  analista_tgs.py  diagramador.py  extractor.py  manager.py
crew/config/: llm.py
crew/schemas/: __init__.py  diagram.py  extraction.py  input.py  tgs_output.py
crew/tasks/: __init__.py  analysis.py  coordination.py  diagram.py  extraction.py
crew/tools/: __init__.py  image_reader.py  pdf_reader.py  url_fetcher.py
deploy/proxy/: README.md  n8n.qyvos.com.conf
docs/: agents-design.md  architecture.md  demo-commands.md  demo-script.md  guia-equipo.md  openclaw-roles-tgs.md  presentacion-notebooklm-prompt.md  presentacion-slides-source.md  presentacion-style-guide.md  setup-guide.md  tgs-analysis-of-itself.md
examples/: input-pdf.json  input-text.json  output-sample.json
examples/openclaw/: README.md  test-analysis-chat.json  test-analysis-memory.json  test-crewai-caller.json  test-reddit-publisher.json  test-tgs-validator.json  test-web-search.json
frontend/: index.html
n8n/: README.md
n8n/workflows/: 01-telegram-to-crew.json  02-openclaw-publish-reddit.json  03-openclaw-followup-chat.json  04-openclaw-direct-channel.json  05-analyze-webhook.json
openclaw/: README.md
openclaw/config/: openclaw.json
openclaw/workspace/: AGENTS.md  SOUL.md
openclaw/workspace/skills/analysis-chat/: SKILL.md
scripts/: test-openclaw-roles.sh
(+9 files in other folders)
