[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tgs-mapper-crew"
version = "0.1.0"
description = "Multi-agent TGS analysis service (CrewAI + FastAPI)"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
